--- a/resume/style.css
+++ b/resume/style.css
@@ -5,40 +5,95 @@ body {
 	font-weight: 400;
 
 }
-h1 {
+#container{
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding-bottom: 50px;
+}
+#name {
 	font-size: 3em;
 	color: #33485e;
 	text-transform: uppercase;
+	border-bottom: solid;
+	border-bottom-color: #33485e;
+	border-bottom-width: 60%; min-width: 300px;
+	text-align: center;
+
+
+
 }
 img{
 	display: none;
 }
-b{
+#title{
 	text-transform: uppercase;
 	font-size: 1.5em;
 	color: #33485e;
 }
-h2{
+.sectionheader{
 	font-size: 1.5em;
 	text-transform: uppercase;
 	background-color: #33485e;
 	color: white;
 	font-weight: 400;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	margin-right: 0;
+	margin-left: 0;
+	width: 70%;
+	min-width: 300px;
 }
-h3{
+.jobtitle{
 	font-weight: 600;
 	font-size: 1.5em;
 
 }
-h4{
+.organization{
 	font-weight: 400;
-	font-size: 1.5em;
+	font-size: 1.25em;
 }
-h5{
+.date{
 	font-weight: 400;
 	font-style: italic;
 	font-size: 1em;
+	margin-top: 2px;
+	margin-left: 0px;
+	margin-right:  0px;
+	margin-bottom: 0px;
 }
-ul li{
+.menu ul li{
 	font-size: 1em;
+	display: inline;
+}
+.menu ul {margin:0px;
+	padding:0px;}
+	.menu{
+		margin: 0px;
+		padding: 0px;
+		text-align: center;
+	}
+
+.description{
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: 0px;
+	margin-left: 0px;
+}
+
+
+#degrees{
+	margin-top: 5px;
+	margin-bottom: 0px;
+	Margin-right: 0px;
+	 margin-left: 0px;
+}
+#do{
+	margin-top: 5px;
+
+}
+#title{
+	font-weight: 600;
+	text-align: center;
+	margin-top: 20px;
 }
